# fear

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_test.sh  fear.c  platform_linux.c  platform_stl.c  test.c
include/fear/: arena.h  array.h  error.h  fear.h  heap.h  logger.h  math.h  mem.h  platform.h  stl.h  string.h  type.h
src/fear/: arena.c  array.c  heap.c  logger.c  math.c  mem.c  stl_helpers.c  string.c
